add norris joke

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title> Tytuł strony </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    
+    <button id="get-joke">"Random joke"</button>
+    <p id='joke'></p>
+    <ig src="man-161135_1280.png">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="scripts.js"></script>
   </body>
 </html>
