--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title> Tytuł strony </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    
+  	<h1>Wyszukiwarka krajów</h1>
+	<button type="submit" id="search">Szukaj kraju</button>
+	<input placeholder="wpisz nazwę kraju" id="country-name" type="text" />
+	<h2>Lista krajów</h2>
+	<ul id="countries">
+		<li>Brak danych</li>
+	</ul>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="scripts.js"></script>
   </body>
 </html>
